# xmsgrid

./: CMakeLists.txt  build.py  conanfile.py  condabuildinfo.cmake
.github/workflows/: XmsGrid-CI.yaml
CMake/: xmsgrid-config.cmake
xmsgrid/geometry/: GmBoostTypes.h  GmExtents.h  GmMultiPolyIntersectionSorter.h  GmMultiPolyIntersectionSorterTerse.cpp  GmMultiPolyIntersectionSorterTerse.h  GmMultiPolyIntersector.cpp  GmMultiPolyIntersector.h  GmMultiPolyIntersectorData.h  GmPolyLinePtRedistributer.h  GmPolygon.h  GmPtSearch.h  GmTriSearch.h  geoms.h
xmsgrid/matrices/: matrix.h
xmsgrid/triangulate/: TrBreaklineAdder.h  TrTin.h  TrTriangulator.h  TrTriangulatorPoints.h  triangles.h
xmsgrid/triangulate/detail/: TrAutoFixFourTrianglePts.h  TrOuterTriangleDeleter.h  triangulate.h
xmsgrid/ugrid/: XmEdge.h  XmUGrid.h  XmUGridUtils.h
xmsgrid/ugrid/detail/: XmGeometry.h
